# lexil

./: .gitignore  CHANGELOG.md  README.md
.github/workflows/: release.yml
apps/desktop/: README.md  components.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
apps/desktop/src/: App.tsx
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: generate.py  icon.icns
apps/desktop/src-tauri/src/: db.rs  error.rs  main.rs  models.rs  normalize.rs  pack_manager.rs  user.rs
apps/desktop/src/components/: AddToListMenu.tsx  Conjugations.tsx  CreateListDialog.tsx  EmptyState.tsx  EntryListView.tsx  EntryView.tsx  LangPopover.tsx  NotesSection.tsx  OnboardingFlow.tsx  PackManager.tsx  ResultList.tsx  SearchInput.tsx  SettingsPanel.tsx  SettingsView.tsx  Sidebar.tsx  TagsRow.tsx
apps/desktop/src/components/ui/: button.tsx  input.tsx  tabs.tsx  tooltip.tsx
apps/desktop/src/hooks/: useDebounced.ts  useDirection.ts  useFontScale.ts  useHistory.ts  useOnboarding.ts  useShortcuts.ts  useTheme.ts
apps/desktop/src/lib/: api.ts  direction.ts  tags.ts  types.ts
apps/desktop/src/styles/: globals.css
docs/: ADDING_A_LANGUAGE.md  ARCHITECTURE.md  DESIGN.md  LICENSES.md
packs/: README.md  manifest.json
pipeline/: build_pack.py  normalize.py  query.py  requirements.txt  schema.sql
pipeline/sources/: fetch_kaikki.py  kaikki_french.py  kaikki_german.py  kaikki_japanese.py  kaikki_spanish.py
pipeline/tests/fixtures/: kaikki_sample.jsonl
